Closed Bug 502319 Opened 15 years ago Closed 15 years ago

Can't drag a link from an external app to an inactive/background tab widget

Categories

(Camino Graveyard :: Tabbed Browsing, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

Details

(Keywords: regression, Whiteboard: [camino-2.0])

Attachments

(1 file)

STR:

0) Have two or more tabs on your tab bar
1) Drag a link from an external application (I used Colloquy, Safari, and TextEdit) to the widget for the inactive/background tab

ER: Copy cursor appears on the drag, blue highlight appears on the tab widget, and dropping succeeds

AR: No copy cursor, no blue highlight, and dropping causes the drag to bounce back to the source

Dragging works as expected if you drag to the active tab's widget, to the right or left scroll arrows, to the "all tabs" widget, or to the empty tab bar area when there are not a full set of tabs.

Dragging to an inactive tab's widget worked fine in 1.6.x.  I suspect some part of the tab dragging rewrite broke this, but I haven't had a chance to check.
Er, I also should add, dragging a link from inside Camino, either from content or chrome, to a background tab widget also works; it's just drags from external apps!
Since this is a regression from 1.6.x (and also since it annoys me ;) ), flagging for late 2.0 consideration.  Won't block on it, but if someone's out of things to work on, this would be one to look at.
Flags: camino2.0?
Attached patch FixSplinter Review
I probably broke this during the restructuring to make tabs views; [self view] in this comparison is a BrowserWrapper, and only the active tab's BrowserWrapper has a window, so background tabs were always nil--which is also the drag source for any drag from outside the app.
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Attachment #405507 - Flags: superreview?(mikepinkerton)
Comment on attachment 405507 [details] [diff] [review]
Fix

sr=pink
Attachment #405507 - Flags: superreview?(mikepinkerton) → superreview+
Landed on CVS trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: