Camino only - Bug 502319: Fix external URL drops on background tabs. r/sr=pink